<resources>
    <string name="app_name">Shared House</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="monthly_bill_nav">Monthly Bill</string>
    <string name="rooms_nav">Rooms</string>
    <string name="fee_details_nav">Expense Details</string>
    <string name="manage_nav_group">Manage</string>
    <string name="send_nav">Send</string>
    <string name="how_it_works_nav">How it works</string>
    <string name="leave_nav">Housemates Vacations</string>
    <string name="room_name_label">Room Name:</string>
    <string name="save_btn_label">Save</string>
    <string name="edit_room_text_label">Room General Info</string>
    <string name="edit_room_roommate_label">Roommates</string>
    <string name="add_btn_label">Add</string>
    <string name="roommate_name_label">Name</string>
    <string name="roommate_phone_label">Phone Number</string>
    <string name="add_roommate_dialog_title">Add new roommate</string>
    <string name="edit_roommate_dialog_title">Edit roommate</string>
    <string name="ok_btn_label">OK</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="rooms_fragment_title">Rooms</string>
    <string name="edit_rooms_fragment_title">Room Details</string>
    <string name="delete_roommate_dialog_title">Remove roommate</string>
    <string name="delete_roommate_dialog_message">Are you sure that you want to remove %1$s from this room?</string>
    <string name="fees_fragment_title">Expense Details</string>
    <string name="edit_fee_text_label">Expense General Info</string>
    <string name="fee_name_label">Fee Name</string>
    <string name="fee_amount_label">Total Amount</string>
    <string name="edit_fee_splitters_text_label">Splitters</string>
    <string name="delete_room_dialog_title">Remove room</string>
    <string name="delete_room_dialog_message">Are you sure that you want to remove %1$s as a shared room?</string>
    <string name="edit_fee_fragment_title">Expense Details</string>
    <string name="add_room_splitter_dialog_title">Select sharing rooms</string>
    <string name="add_person_splitter_dialog_title">Select sharing people</string>
    <string name="expense_type_label">Expense Type</string>
    <string name="share_type_label">Share Type</string>
    <string name="splitter_caption_text">Share Amount: %1$s (%2$d/%3$d)</string>
    <string name="delete_fee_dialog_title">Remove expense</string>
    <string name="delete_fee_dialog_message">Are you sure that you want to remove this expense: %1$s?</string>
    <string name="splitter_fraction_label">Share fraction</string>
    <string name="edit_splitter_fraction_dialog_title">Edit share fraction</string>
    <string name="bill_detail_roommate_list_caption">This expense should be paid by:</string>
    <string name="bill_fragment_title">Monthly Bill</string>
    <string name="send_bill_dialog_title">Send Bill</string>
    <string name="send_bill_dialog_msg">Do you want to send bill for %1$s?</string>
    <string name="bill_template_total_label">Total</string>
    <string name="action_month_picker_title">Select month</string>
    <string name="action_copy_fee_title">Copy Expenses to Current Month</string>
    <string name="backup_nav">Backup</string>
    <string name="restore_nav">Restore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backup_text_title">Backup Database</string>
    <string name="backup_text_details">Backup your database to prevent your existing data from losing as well as importing it to a new device.</string>
    <string name="backup_btn_label">Backup</string>
    <string name="backup_fragment_title">Backup</string>
    <string name="backup_fail_msg">Fail to backup database.</string>
    <string name="backup_success_msg">Backup database successfully!</string>
    <string name="restore_fail_msg">Fail to restore database.</string>
    <string name="restore_success_msg">Restore database successfully!</string>
    <string name="restore_text_title">Restore Database</string>
    <string name="restore_text_details">Select an existing backup database file to restore the database</string>
    <string name="restore_btn_label">Restore</string>
    <string name="select_file_btn_label">Select File</string>
    <string name="restore_fragment_title">Restore</string>
    <string name="roommate_country_code_label">Country Code</string>
    <string name="phone_number_error_msg">Wrong phone number</string>
    <string name="setting_nav">Settings</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="input_house_name_hint">Enter your house name here</string>
    <string name="default_message_setting_label">Default message when sending bill</string>
    <string name="input_default_message_hint">Enter your message here</string>
    <string name="default_whatsapp_setting_label">Set Whatsapp as default service to send bills</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="image_picker_camera_label">Camera</string>
    <string name="image_picker_gallery_label">Gallery</string>
    <string name="image_picker_dialog_title">Choose picture from</string>
    <string name="house_picture_setting_label">House Profile Picture</string>
    <string name="house_name_setting_label">House Name</string>
    <string name="permission_required_dialog_title">Permission Required</string>
    <string name="write_external_storage_dialog_msg">Without the permission to write to external storage, we cannot perform the action</string>
    <string name="read_contact_dialog_msg">Without the permission to read contacts, profile pictures for rooms and roommates won\'t be shown</string>
    <string name="input_setting_dialog_msg">Please input the new value for this setting</string>
    <string name="send_bill_msg">Send Bill via</string>
    <string name="select_sending_contact_title">Select Person</string>
    <string name="no_whatsapp_alert_title">Cannot find Whatsapp</string>
    <string name="no_whatsapp_alert_message">It seems that you don\'t have Whatsapp app on your device. Please go to Settings to turn off the option to use Whatsapp to send bills.</string>
    <string name="edit_fee_payerers_text_label">Payers</string>
    <string name="action_saving_title">Save</string>
    <string name="payers_caption_text">Paid: %1$s</string>
    <string name="add_fee_payers_dialog_title">Select Fee Payers</string>
    <string name="save_fee_fail_title">Saving Expense Failed</string>
    <string name="save_fee_fail_message">Total prepaod money should be less than the expense amount.</string>
    <string name="prepaid_label">Prepaid amount</string>
    <string name="bill_detail_payers_list_caption">This expense has been prepaid by:</string>
    <string name="bill_detail_payer_bill_name">%1$s (Prepaid)</string>
</resources>
