<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="com.example.mkhoi.sharedhouse.backup.BackupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:text="@string/backup_text_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/backup_text_details" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/backup_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/backup_btn_label"/>

</LinearLayout>
