<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="com.example.mkhoi.sharedhouse.backup.BackupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:text="@string/restore_text_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/restore_text_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backup_file_path"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Body2"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/choose_backup_file_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/select_file_btn_label"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/restore_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/restore_btn_label"/>

</LinearLayout>
