<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="com.example.mkhoi.sharedhouse.database.converter.FeeTypeConverters" />
        <import type="com.example.mkhoi.sharedhouse.database.converter.ShareTypeConverters" />
        <variable
            name="viewModel"
            type="com.example.mkhoi.sharedhouse.fee_edit.EditFeeViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:text="@string/edit_fee_text_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText android:id="@+id/input_fee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.fee.value.name}"
                    android:hint="@string/fee_name_label"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText android:id="@+id/input_fee_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.fee.value.name}"
                    android:hint="@string/fee_amount_label"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp">
                <TextView
                    android:text="Expense Type"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    style="@style/TextAppearance.AppCompat.Subhead"/>
                <TextView
                    android:text="Share by"
                    android:layout_marginLeft="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    style="@style/TextAppearance.AppCompat.Subhead"/>
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_marginTop="8dp">
                <Spinner
                    android:id="@+id/input_fee_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@{FeeTypeConverters.toList()}"
                    android:selectedItemPosition="@={FeeTypeConverters.toInt(viewModel.fee.value.feeType)}"/>

                <Spinner
                    android:id="@+id/input_share_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@{ShareTypeConverters.toList()}"
                    android:selectedItemPosition="@={ShareTypeConverters.toInt(viewModel.fee.value.shareType)}"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:text="@string/edit_fee_splitters_text_label" />

    </LinearLayout>
</layout>